fix/spacings

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,6 +41,7 @@
       }
 
       &__description {
+        margin-bottom: 0;
       }
 
       &__select {
