--- a/src/components/AllergensContainer/components/Allergen/styles.scss
+++ b/src/components/AllergensContainer/components/Allergen/styles.scss
@@ -4,4 +4,8 @@
   height: 1rem;
   align-items: center;
   margin: 0;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
