--- a/src/components/AllergensContainer/styles.scss
+++ b/src/components/AllergensContainer/styles.scss
@@ -22,6 +22,7 @@
     &__general {
       width: 30%;
       padding: 1rem;
+      padding-bottom: 0;
     }
 
     &__specific {
