--- a/src/components/IngredientSelector/components/SortableComponent/styles.scss
+++ b/src/components/IngredientSelector/components/SortableComponent/styles.scss
@@ -3,7 +3,7 @@
 .label__ingredients__picker__added {
   width: 80%;
   margin: 0 auto;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 
   &__title {
     font-family: $font-family-secondary;
