--- a/src/components/IngredientSelector/styles.scss
+++ b/src/components/IngredientSelector/styles.scss
@@ -68,8 +68,8 @@
       button {
         color: white;
         background: transparent;
-        font-size: 2rem;
-        line-height: 1.8rem;
+        font-size: 1.7rem;
+        line-height: 1.1rem;
         width: 100%;
         border-radius: 50%;
         height: 100%;
