--- a/src/components/Producer/styles.scss
+++ b/src/components/Producer/styles.scss
@@ -15,7 +15,6 @@
     &__button {
       height: 2.5rem;
       padding: 0 1rem;
-      margin-bottom: 2rem;
       border-radius: 3px;
       background: $ingredient;
       border: none;
